# interview-project

./: .flake8  README.md  docker-compose.yml  makefile  pyproject.toml
docker/: app.Dockerfile  db.Dockerfile  docker-compose.yml  init.sql
docker/Docker/: init.sql
scripts/: start_webserver.py
service_provider_api/: app.py  config.py  dependencies.py  models.py  schemas.py
service_provider_api/api/: app.py  dependencies.py  schemas.py
service_provider_api/api/endpoints/: service_provider.py  service_provider_aggregations.py
service_provider_api/core/: config.py  log_setup.py  utils.py
service_provider_api/core/repositories/: service_provider.py  service_provider_review.py
service_provider_api/database/: database.py  models.py
service_provider_api/endpoints/: service_provider.py  service_provider_aggregations.py  service_provider_endpoints.py
service_provider_api/models/: service_provider.py
service_provider_api/repositories/: service_provider.py  service_provider_review.py
service_provider_api/schemas/: base.py  new_service_provider.py  service_provider.py  service_provider_availability.py  service_provider_review.py
service_provider_api/utils/: database.py
test/: conftest.py  test_aggregations.py  test_delete_endpoints.py  test_get_endpoints.py  test_post_endpoints.py  test_put_endpoints.py  test_service_provider_repository.py
test/api/: conftest.py  test_aggregations.py  test_delete_endpoints.py  test_get_endpoints.py  test_post_endpoints.py  test_put_endpoints.py
test/unit/: test_service_provider_creation.py  test_service_provider_repository.py
(+5 files in other folders)
