[tool.poetry]
name = "service_provider_api"
version = "0.1.0"
description = ""
authors = ["Kieran Lavelle <kmplavelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
orjson = "^3.8.2"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^1.4.44"
structlog = "^22.3.0"
uvicorn = "^0.20.0"
fastapi-versioning = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
httpx = "^0.23.1"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "scripts.start_webserver:start"
